--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -318,11 +318,12 @@
         android:text="Z"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.017"
+        app:layout_constraintHorizontal_bias="0.015"
         app:layout_constraintStart_toEndOf="@+id/buttonY"
-        app:layout_constraintTop_toBottomOf="@+id/buttonV" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonV"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="667dp"
         android:layout_height="171dp"
         android:layout_marginStart="8dp"
@@ -335,10 +336,10 @@
         app:layout_constraintTop_toTopOf="parent"
         card_view:cardBackgroundColor="#FA8072"
         card_view:cardCornerRadius="25dp"
-        card_view:layout_constraintHorizontal_bias="1.0"
-        card_view:layout_constraintVertical_bias="1.0">
+        card_view:layout_constraintHorizontal_bias="0.166"
+        card_view:layout_constraintVertical_bias="0.0">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -364,7 +365,7 @@
                 card_view:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/botaoConfirmar"
+                android:id="@+id/botao_confirmar"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_marginEnd="32dp"
@@ -372,11 +373,11 @@
 
                 android:background="#60d394"
                 android:text="Confimar"
-                card_view:layout_constraintBottom_toTopOf="@+id/limpar"
+                card_view:layout_constraintBottom_toTopOf="@+id/botao_limpar"
                 card_view:layout_constraintEnd_toEndOf="parent" />
 
             <Button
-                android:id="@+id/limpar"
+                android:id="@+id/botao_limpar"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_marginEnd="32dp"
@@ -397,7 +398,7 @@
                 card_view:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/botaoPlay"
+                android:id="@+id/botao_play"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="16dp"
@@ -407,11 +408,11 @@
                 card_view:layout_constraintTop_toTopOf="parent" />
             <!--app:srcCompat="@android:drawable/ic_media_play" />-->
 
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <ImageView
-        android:id="@+id/botaoVoltar"
+        android:id="@+id/botao_voltar"
         android:layout_width="77dp"
         android:layout_height="86dp"
         android:layout_marginStart="48dp"
@@ -451,4 +452,4 @@
         app:srcCompat="@drawable/coracao_icon" />
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
