--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/salvar"
+        android:id="@+id/botao_salvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="564dp"
@@ -58,313 +58,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <Button
-        android:id="@+id/buttonA"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="204dp"
-        android:layout_marginTop="212dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="A"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonB"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="B"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonA"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonC"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="C"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonB"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonD"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="D"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonC"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-
-    <Button
-        android:id="@+id/buttonE"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="E"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonD"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonF"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="212dp"
-        android:text="F"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonE"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonG"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="204dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="G"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonA" />
-
-    <Button
-        android:id="@+id/buttonH"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:text="H"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonG"
-        app:layout_constraintTop_toBottomOf="@+id/buttonB" />
-
-    <Button
-        android:id="@+id/buttonI"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:text="I"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonH"
-        app:layout_constraintTop_toBottomOf="@+id/buttonC" />
-
-    <Button
-        android:id="@+id/buttonJ"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:text="J"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:padding="4dp"
-        app:layout_constraintStart_toEndOf="@+id/buttonI"
-        app:layout_constraintTop_toBottomOf="@+id/buttonD" />
-
-
-    <Button
-        android:id="@+id/buttonK"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:text="K"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonJ"
-        app:layout_constraintTop_toBottomOf="@+id/buttonE" />
-
-    <Button
-        android:id="@+id/buttonL"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="L"
-        app:layout_constraintStart_toEndOf="@+id/buttonK"
-        app:layout_constraintTop_toBottomOf="@+id/buttonF" />
-
-    <Button
-        android:id="@+id/buttonM"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="204dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="M"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonG" />
-
-
-    <Button
-        android:id="@+id/buttonN"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:text="N"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonM"
-        app:layout_constraintTop_toBottomOf="@+id/buttonH" />
-
-    <Button
-        android:id="@+id/buttonO"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:padding="1dp"
-        android:text="O"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonN"
-        app:layout_constraintTop_toBottomOf="@+id/buttonI" />
-
-    <Button
-        android:id="@+id/buttonP"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:text="P"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonO"
-        app:layout_constraintTop_toBottomOf="@+id/buttonJ" />
-
-    <Button
-        android:id="@+id/buttonQ"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:text="Q"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:padding="1dp"
-        app:layout_constraintStart_toEndOf="@+id/buttonP"
-        app:layout_constraintTop_toBottomOf="@+id/buttonK" />
-
-    <Button
-        android:id="@+id/buttonR"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-
-        android:text="R"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonQ"
-        app:layout_constraintTop_toBottomOf="@+id/buttonL" />
-
-    <Button
-        android:id="@+id/buttonS"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="204dp"
-
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="S"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonM" />
-
-    <Button
-        android:id="@+id/buttonT"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:text="T"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonS"
-        app:layout_constraintTop_toBottomOf="@+id/buttonN" />
-
-    <Button
-        android:id="@+id/buttonU"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-
-        android:text="U"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonT"
-        app:layout_constraintTop_toBottomOf="@+id/buttonO" />
-
-    <Button
-        android:id="@+id/buttonV"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-
-        android:text="V"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonU"
-        app:layout_constraintTop_toBottomOf="@+id/buttonP" />
-
-    <Button
-        android:id="@+id/buttonW"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-
-        android:text="W"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonV"
-        app:layout_constraintTop_toBottomOf="@+id/buttonQ" />
-
-    <Button
-        android:id="@+id/buttonX"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-
-        android:text="X"
-        android:clickable="true"
-        android:onClick="getClick"
-        app:layout_constraintStart_toEndOf="@+id/buttonW"
-        app:layout_constraintTop_toBottomOf="@+id/buttonR" />
-
-    <Button
-        android:id="@+id/buttonY"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="308dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="4dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="Y"
+    <fragment
+        android:id="@+id/teclado"
+        android:name="com.palavras.unicap.palavrinhas.TecladoFragment"
+        android:layout_width="479dp"
+        android:layout_height="203dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonU"
-        app:layout_constraintVertical_bias="0.727" />
+        app:layout_constraintEnd_toStartOf="@+id/botao_salvar"></fragment>
 
-    <Button
-        android:id="@+id/buttonZ"
-        android:layout_width="40dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="12dp"
-        android:clickable="true"
-        android:onClick="getClick"
-        android:text="Z"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonY" />
-</android.support.constraint.ConstraintLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
