--- a/app/src/main/res/layout/fragment_teclado.xml
+++ b/app/src/main/res/layout/fragment_teclado.xml
@@ -1,10 +1,300 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activity.TecladoFragment">
+    android:layout_width="465dp"
+    android:layout_height="175dp"
+    tools:context=".TecladoFragment"
+    android:background="#fffd82">
 
 
+    <Button
+        android:id="@+id/buttonA"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="4dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="A"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/buttonB"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="4dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="B"
+        app:layout_constraintStart_toEndOf="@+id/buttonA"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonC"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="4dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="C"
+        app:layout_constraintStart_toEndOf="@+id/buttonB"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonD"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="4dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="D"
+        app:layout_constraintStart_toEndOf="@+id/buttonC"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/buttonE"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="4dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="E"
+        app:layout_constraintStart_toEndOf="@+id/buttonD"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonF"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="4dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="F"
+        app:layout_constraintStart_toEndOf="@+id/buttonE"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonG"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="100dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="G"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonH"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="84dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="H"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonA" />
+
+    <Button
+        android:id="@+id/buttonI"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="I"
+        app:layout_constraintStart_toEndOf="@+id/buttonH"
+        app:layout_constraintTop_toBottomOf="@+id/buttonC" />
+
+    <Button
+        android:id="@+id/buttonJ"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:padding="4dp"
+        android:text="J"
+        app:layout_constraintStart_toEndOf="@+id/buttonI"
+        app:layout_constraintTop_toBottomOf="@+id/buttonD" />
+
+
+    <Button
+        android:id="@+id/buttonK"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="K"
+        app:layout_constraintStart_toEndOf="@+id/buttonJ"
+        app:layout_constraintTop_toBottomOf="@+id/buttonE" />
+
+    <Button
+        android:id="@+id/buttonL"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="L"
+        app:layout_constraintStart_toEndOf="@+id/buttonK"
+        app:layout_constraintTop_toBottomOf="@+id/buttonF" />
+
+    <Button
+        android:id="@+id/buttonM"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="M"
+        app:layout_constraintStart_toEndOf="@+id/buttonL"
+        app:layout_constraintTop_toBottomOf="@+id/buttonF" />
+
+
+    <Button
+        android:id="@+id/buttonN"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="100dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="N"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonG" />
+
+    <Button
+        android:id="@+id/buttonO"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="84dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:padding="1dp"
+        android:text="O"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonI" />
+
+    <Button
+        android:id="@+id/buttonP"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="P"
+        app:layout_constraintStart_toEndOf="@+id/buttonO"
+        app:layout_constraintTop_toBottomOf="@+id/buttonJ" />
+
+    <Button
+        android:id="@+id/buttonQ"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:padding="1dp"
+        android:text="Q"
+        app:layout_constraintStart_toEndOf="@+id/buttonP"
+        app:layout_constraintTop_toBottomOf="@+id/buttonK" />
+
+    <Button
+        android:id="@+id/buttonR"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="R"
+        app:layout_constraintStart_toEndOf="@+id/buttonQ"
+        app:layout_constraintTop_toBottomOf="@+id/buttonL" />
+
+    <Button
+        android:id="@+id/buttonS"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="244dp"
+
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="S"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonM" />
+
+    <Button
+        android:id="@+id/buttonT"
+        android:layout_width="41dp"
+        android:layout_height="36dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="T"
+        app:layout_constraintStart_toEndOf="@+id/buttonS"
+        app:layout_constraintTop_toBottomOf="@+id/buttonM" />
+
+    <Button
+        android:id="@+id/buttonU"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+
+        android:layout_marginEnd="100dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="U"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonN" />
+
+    <Button
+        android:id="@+id/buttonV"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+
+        android:layout_marginStart="124dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="V"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonP" />
+
+    <Button
+        android:id="@+id/buttonW"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="W"
+        app:layout_constraintStart_toEndOf="@+id/buttonV"
+        app:layout_constraintTop_toBottomOf="@+id/buttonQ" />
+
+    <Button
+        android:id="@+id/buttonX"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="X"
+        app:layout_constraintStart_toEndOf="@+id/buttonW"
+        app:layout_constraintTop_toBottomOf="@+id/buttonR" />
+
+    <Button
+        android:id="@+id/buttonY"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="244dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="Y"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonS" />
+
+    <Button
+        android:id="@+id/buttonZ"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="140dp"
+        android:clickable="true"
+        android:onClick="getClick"
+        android:text="Z"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonT" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
