--- a/app/src/main/res/layout/fragment_teclado.xml
+++ b/app/src/main/res/layout/fragment_teclado.xml
@@ -287,11 +287,10 @@
         android:id="@+id/buttonZ"
         android:layout_width="40dp"
         android:layout_height="36dp"
-        android:layout_marginEnd="140dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="Z"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonY"
         app:layout_constraintTop_toBottomOf="@+id/buttonT" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
