--- a/app/src/main/res/layout/activity_recordes.xml
+++ b/app/src/main/res/layout/activity_recordes.xml
@@ -8,4 +8,37 @@
     tools:context=".Activity.RecordesActivity"
     android:background="#fffd82">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="677dp"
+        android:layout_height="307dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="52dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_usuario"
+        android:id="@+id/lista_usuarios">
+
+        <View
+            android:id="@+id/lista_notas_fundo_gradiente_inferior"
+            android:layout_width="0dp"
+            android:layout_height="5dp"
+            android:background="@drawable/fundo_gradiente_insere_nota"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Inserir uma nota"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="TESTE"/>
+
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
